--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,10 +8,10 @@
 .menu__content {
   display: flex;
   align-items: center;
-  font-size: 14pt;
-
-  /* prevent event bubbling from the content */
-  pointer-events: none;
+  font-size: 24pt;
+}
+.pointer {
+  cursor: pointer;
 }
 .menu__icon:empty {
   width: .875em;
@@ -24,7 +24,7 @@
   color: #cf0036;
 }
 .menu__icon {
-  margin-right: 15px;
+  margin-right: 20px;
 }
 .icon-wrapper.hidden {
   visibility: hidden;
